--- a/src/theme/Footer/styles.module.css
+++ b/src/theme/Footer/styles.module.css
@@ -4,5 +4,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 2em;
+    text-align: center;
+}
+
+.section_padding {
+    padding: 4rem 6rem;
+}
+
+@media screen and (max-width: 650px) {
+    .section_padding {
+        padding: 4rem;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .section_padding {
+        padding: 3rem;
+    }
 }
