--- a/src/components/Workflow/styles.module.css
+++ b/src/components/Workflow/styles.module.css
@@ -4,27 +4,62 @@
  */
 .workflow {
     display: flex;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .section_padding {
     padding: 4rem 6rem;
 }
 
-.workflow_image {
-    flex: 1;
+.how_oras_works {
+    width: 100%;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2rem;
+}
+
+.how_oras_works h1 {
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 55px;
+    color: var(--ifm-color-primary);
+}
+
+.workflow_image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 1050px) {
+    .how_oras_works {
+        margin-bottom: 1rem;
+    }
 }
 
 @media screen and (max-width: 650px) {
     .section_padding {
         padding: 2rem;
     }
+
+    .how_oras_works h1 {
+        font-size: 40px;
+        line-height: 60px;
+    }
 }
 
 @media screen and (max-width: 490px) {
     .section_padding {
         padding: 2rem;
+    }
+
+    .how_oras_works h1 {
+        font-size: 35px;
+        line-height: 48px;
     }
 }
