--- a/src/components/Workflow/styles.module.css
+++ b/src/components/Workflow/styles.module.css
@@ -18,6 +18,7 @@
     width: 100%;
     text-align: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 2rem;
@@ -28,6 +29,13 @@
     font-size: 50px;
     line-height: 55px;
     color: var(--ifm-color-primary);
+}
+
+.how_oras_works p {
+    font-size: 22px;
+    font-weight: 400;
+    text-align: justify;
+    padding: 15px;
 }
 
 .workflow_image {
@@ -61,5 +69,9 @@
     .how_oras_works h1 {
         font-size: 35px;
         line-height: 48px;
+    }
+
+    .how_oras_works p {
+        font-size: 20px;
     }
 }
